@@ -1,4 +1,4 @@
-﻿// Copyright 2004-2011 Castle Project - http://www.castleproject.org/
+// Copyright 2004-2011 Castle Project - http://www.castleproject.org/
 // 
 // Licensed under the Apache License, Version 2.0 (the "License");
 // you may not use this file except in compliance with the License.
@@ -12,15 +12,25 @@
 // See the License for the specific language governing permissions and
 // limitations under the License.
 
-namespace Castle.Interceptors
+namespace Castle.DynamicProxy.Tests.Interfaces
 {
-	using Castle.DynamicProxy;
-
-	public class ThrowingInterceptor : IInterceptor
+	public interface ISimple
 	{
-		public void Intercept(IInvocation invocation)
+		void Method();
+	}
+
+	public class Simple : ISimple
+	{
+		private int count;
+
+		public int Count
 		{
-			throw new ThrowingInterceptorException("Because I feel like it");
+			get { return count; }
+		}
+
+		public void Method()
+		{
+			count++;
 		}
 	}
 }
